<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Кредитный калькулятор</string>
    <string name="app_version_major">2.2</string>
    <string name="app_version_minor">1</string>
    <string name="web_site">http://omdroid.ru</string>
    <string name="about_label">О программе</string>
    <string name="labelName">Кредитный калькулятор</string>
    <string name="copyright">© Omdroid 2013–2014</string>
    <string name="action_menu_rasch">Расчет</string>
    <string name="action_menu_analitic">Аналитика</string>
    <!--Label-->
    <string name="main_layout_label_title">Параметры кредита</string>
    <string name="title_new_debt">Новый кредит</string>
    <string name="param_payment">Параметры платежа</string>
    <string name="mll_details">Детали кредита</string>
    <string name="ill_details">Детали платежа</string>
    <string name="mll_details_sum">Сумма займа</string>
    <string name="mll_details_overpayment">Переплата</string>
    <string name="mll_details_total">Итого</string>
    <string name="main_layout_label_credit_goal">Цель</string>
    <string name="mll_credit_date">Дата получения</string>
    <string name="main_layout_label_credit_sum">Сумма</string>
    <string name="main_layout_label_credit_term">Срок</string>
    <string name="main_layout_label_credit_dopPayment">Досрочное погашение</string>
    <string name="main_layout_label_credit_percent">Ставка</string>
    <string name="result_layout_label_payment">Если платить по:</string>
    <string name="list_dialog_label_title">Платеж</string>
    <string name="list_dialog_label_dopPaymentMouth">Если в этом месяце заплатить:</string>
    <string name="container_balance_credit">Долг</string>
    <string name="container_date_credit">Дата</string>
    <string name="container_balance_term_credit">Срок</string>
    <string name="container_balance_next_pay_credit">Будущий платеж</string>
    <string name="list_debt_label_total_payment">Итого в месяц</string>
    <string name="info_payment_label">Платеж</string>
    <string name="info_debt_label">Долг</string>
    <string name="container_over_debt">Выплачено</string>
    <string name="sum_add_payment">Сумма досрочного погашения</string>
    <!--form_TablePaymentSavedDebt-->
    <string name="number_payment">Номер платежа</string>
    <string name="date_payment">Дата платежа</string>
    <string name="sum_payment">Сумма платежа</string>
    <string name="sum_pay_in_debt">Сумма в счет долга</string>
    <string name="sum_pay_in_percent">Сумма в счет процентов</string>
    <string name="balance_debt">Остаток по кредиту</string>
    <string name="notify_for_save_csv">График платежей сохранен на SD под именем Debt_</string>
    <!--form_about-->
    <string name="quote_about">Не почитай денег ни больше, ни меньше, чем они того стоят; это хороший слуга и плохой хозяин.</string>
    <string name="author_quote_about">Александр Дюма (сын)</string>
    <!--layout info-->
    <string name="overpayment">Досрочное погашение</string>
    <!--dialog rating-->
    <string name="rating_text">Ваша оценка поможет в дальнейшем развитии приложения</string>
    <string name="rating_question">Оценить сейчас?</string>
    <string name="rating_yes">Да</string>
    <string name="rating_no">Нет</string>
    <string name="rating_yes_fix">Больше не показывать</string>
    <!--dialog_delete-->
    <string name="delete_text">Внимание! Будет удалена вся информация о выбранных кредитах.</string>
    <string name="delete_question">Выполнить удаление?</string>
    <string name="delete_yes">Да</string>
    <string name="delete_no">Нет</string>
    <!--dialog_about-->
    <string name="dialog_about_title">О программе</string>
    <!--dialog_add_notify-->
    <string name="dialog_title">Напоминание</string>
    <string name="count_day">За сколько дней напомнить о платеже?</string>
    <string name="select_time_notify">Выберите время напоминания</string>
    <string name="time_notify">Время напоминания</string>
    <!--dialog_change_percent-->
    <string name="dChangePercent_title">Изменение процентной ставки</string>
    <string name="dChangePercent_text">Введите новое значение процентной ставки</string>
    <!--dialog_change_goal-->
    <string name="dChangeGoal_title">Изменение цели кредита</string>
    <string name="dChangeGoal_text">Введите новую цель кредита</string>
    <!--dialog_control_save_debt-->
    <string name="dControlSaveDebt_text">Программа позволяет сохранять кредиты для дальнейшего контроля их погашения.</string>
    <string name="dControlSaveDebt_question">Сохранить кредит?</string>
    <!--popup-->
    <string name="popup_archive">Архив</string>
    <string name="popup_current">Текущие</string>
    <string name="popup_about">О программе</string>
    <string name="popup_table">График платежей</string>
    <string name="menu_add_notify">Добавить напоминание</string>
    <string name="menu_review_notify">Просмотреть напоминание</string>
    <string name="popup_over_payment">Досрочное погашение</string>
    <string name="popup_percent_change">Изменить ставку</string>
    <string name="popup_goal_change">Изменить цель кредита</string>
    <string name="popup_save_in_file">Сохранить в файл</string>
    <!--Value-->
    <string name="main_layout_value_credit_sum">900 000</string>
    <string name="main_layout_value_credit_percent">12</string>
    <string name="main_layout_value_credit_term">120</string>
    <string name="main_layout_value_credit_type">Квартира</string>
    <string name="list_debt_value_total_payment">0.0</string>
    <!--Button-->
    <string name="buttonNextMainLayout">Сохранить</string>
    <string name="butCancel">Отмена</string>
    <string name="butOK">OK</string>
    <string name="butYes">Да</string>
    <string name="butNo">Нет</string>
    <string name="butIns">Установить</string>
    <string name="butDel">Удалить</string>
    <string name="buttonNextListDialog">Далее</string>
    <!--Toasts-->
    <string name="addNotify">Напоминание добавлено</string>
    <string name="delNotify">Напоминание удалено</string>
    <!--Notification-->
    <string name="text_for_titleNotify">Напоминание! Оплата кредита</string>
    <string name="text_for_notify">Напоминаем о предстоящих платежах по кредитам:</string>
    <string name="text_for_oneNotify_part1">Напоминаем о предстоящем</string>
    <string name="text_for_oneNotify_part2">платеже по кредиту за</string>
    <string name="text_for_notSumPayment">в размере</string>
    <!--Array-->
    <array name="array_types_credit">
        <item>Квартира</item>
        <item>Машина</item>
        <item>Отдых</item>
        <item>Свадьба</item>
        <item>Учеба</item>
        <item>Другое</item>
    </array>
    <array name="month">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </array>
</resources>
