<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:background="@android:color/background_light">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_text"
            android:id="@+id/textView" style="@style/styleLabel_2" android:layout_marginTop="5dp"
            android:paddingLeft="5dp" android:paddingRight="5dp" android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_question"
            android:id="@+id/textView1" style="@style/styleLabel_2" android:textColor="@android:color/black"
            android:layout_marginTop="10dp" android:paddingLeft="5dp" android:paddingRight="5dp"
            android:gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_yes"
                android:id="@+id/butRatYes" android:layout_weight="1"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_no"
                android:id="@+id/butRatNo" android:layout_weight="1"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_yes_fix"
                android:id="@+id/butRatYesFix" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>