<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:background="@android:color/background_light">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingTop="5dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_text"
                android:id="@+id/textView" style="@style/styleLabel_2" android:gravity="center_horizontal"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_question"
            android:id="@+id/textView1" android:gravity="center_horizontal" style="@style/styleLabel_2"
            android:textColor="@android:color/black" android:paddingTop="5dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingTop="5dp">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_yes"
                android:id="@+id/butDelYes" android:layout_weight="1"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_no"
                android:id="@+id/butDelNo" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>