<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@color/background_app"
                android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_day"
            android:id="@+id/textView" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            style="@style/styleLabel_2"
            android:paddingTop="5dp" android:paddingBottom="5dp" android:gravity="center_horizontal"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/tvCountDayNot" android:layout_centerHorizontal="true" android:layout_below="@+id/textView"
            android:textColor="@android:color/black" android:textSize="36sp" android:textStyle="bold"
            android:layout_gravity="center_horizontal" android:paddingTop="5dp" android:paddingBottom="5dp"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_notify"
            android:id="@+id/textView2" android:layout_centerHorizontal="true" android:layout_below="@+id/sbCountDay"
            style="@style/styleLabel_2" android:layout_gravity="center_horizontal"
            android:paddingTop="5dp" android:paddingBottom="5dp" android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:00"
            android:id="@+id/tvTimeNot" android:layout_centerHorizontal="true" android:layout_below="@+id/textView2"
            android:textColor="@android:color/black" android:textSize="36sp" android:textStyle="bold"
            android:layout_gravity="center_horizontal" android:paddingTop="5dp" android:paddingBottom="5dp"
            android:gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTimeNot">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/butDel"
                android:id="@+id/butDel" android:layout_weight="1"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/butCancel"
                android:id="@+id/butCancel" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>