<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="5dp" android:background="@color/background_app">

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:src="@drawable/app_icon"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote_about"
            android:id="@+id/textView" android:gravity="center_horizontal" android:textStyle="bold|italic"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_quote_about"
            android:id="@+id/textView1" android:gravity="right" android:textStyle="italic"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal|bottom" android:paddingBottom="25dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView1" android:background="@drawable/press_twit" android:paddingLeft="15dp"
                android:paddingRight="15dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2" android:src="@drawable/press_face" android:paddingLeft="15dp"
                android:paddingRight="15dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3" android:src="@drawable/press_vk" android:paddingLeft="15dp"
                android:paddingRight="15dp"/>
    </LinearLayout>
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingBottom="10dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/name" android:layout_gravity="center_horizontal|bottom"
            android:layout_above="@+id/ver" android:layout_centerHorizontal="true" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:id="@+id/ver" android:layout_gravity="center_horizontal|bottom"
            android:layout_above="@+id/web" android:layout_centerHorizontal="true" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_site"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="#0707ff"
            android:id="@+id/web" android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>