<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_label_title"
            android:id="@+id/labelTitleMain" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
            android:textColor="@color/colorValue" android:paddingLeft="10dp" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:id="@+id/line_1Main" android:layout_alignParentLeft="true"
            android:layout_below="@+id/labelTitleMain" android:background="#021460"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
    <TextView
            style="@style/styleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Кредит"
            android:textSize="30sp"
            android:layout_below="@+id/labelTitleMain"
            android:id="@+id/labelCreditType"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp" />
    <ImageView
            android:id="@+id/labelDebtTypeIco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ico_home"
            android:layout_below="@+id/line_1Main"
            android:layout_alignParentRight="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/markerSumCredit" android:layout_alignLeft="@+id/labelTitleMain" android:layout_below="@id/labelDebtTypeIco"
            android:src="@drawable/marker_green_one" android:layout_marginLeft="25dp" android:layout_marginTop="25dp"/>
    <TextView
            style="@style/styleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_label_credit_sum"
            android:id="@+id/labelCreditSum"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/markerSumCredit"
            android:layout_marginRight="25dp"/>
    <EditText
            style="@style/styleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_value_credit_sum"
            android:id="@+id/etCreditSum" android:layout_alignRight="@+id/labelCreditSum"
            android:layout_below="@+id/markerSumCredit"
            android:layout_alignLeft="@+id/labelCreditSum" android:gravity="center_vertical|right"
            android:inputType="numberDecimal" android:maxLength="10"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/markerPercentCredit" android:layout_alignLeft="@+id/textView" android:layout_below="@+id/etCreditSum"
            android:src="@drawable/marker_green_two" android:layout_marginLeft="25dp" android:layout_marginTop="25dp"/>
    <TextView
            style="@style/styleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_label_credit_percend"
            android:id="@+id/labelPercendCredit"
            android:layout_alignRight="@+id/labelCreditSum"
            android:layout_alignBottom="@+id/markerPercentCredit"/>
    <EditText
            style="@style/styleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_value_credit_percend"
            android:id="@+id/etPercentCredit" android:layout_alignRight="@+id/labelCreditSum"
            android:layout_below="@+id/markerPercentCredit" android:layout_alignLeft="@+id/labelPercendCredit"
            android:gravity="center_vertical|right"
            android:inputType="numberDecimal" android:maxLength="5"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/markerTermCredit" android:layout_alignLeft="@+id/textView"
            android:layout_below="@+id/etPercentCredit" android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp" android:src="@drawable/marker_green_three"/>
    <TextView
            style="@style/styleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_label_credit_term"
            android:id="@+id/labelTermCredit"
            android:layout_alignRight="@+id/labelCreditSum" android:layout_alignBottom="@+id/markerTermCredit"/>
    <EditText
            style="@style/styleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_value_credit_term"
            android:id="@+id/etTermCredit" android:layout_alignRight="@+id/labelCreditSum"
            android:layout_below="@+id/markerTermCredit"
            android:gravity="center_vertical|right"
            android:inputType="number" android:maxLength="3"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
    <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:text="@string/buttonNextMainLayout"
            android:textColor="@color/color_style"
            android:textSize="25sp"
            android:id="@+id/butStart"
            android:background="@drawable/but_style_start"/>
    </LinearLayout>
</RelativeLayout>